# Stock_Analyzer_v2

./: .gitignore  README.md  pyproject.toml
examples/: simple_fetch.py
src/data/enums/: metric_category.py
src/stock_analyzer_v2/core/: fetcher.py  metric_availability_checker.py  yfinance_fetcher.py
src/stock_analyzer_v2/core/models/: metric_availability.py
src/stock_analyzer_v2/data/: metric_registry.py
src/stock_analyzer_v2/data/enums/: metrics.py  yfinance_source.py
src/stock_analyzer_v2/data/models/: metric.py  yfinance_mapping.py
src/stock_analyzer_v2/data/registries/: metric_registry.py  yfinance_metric_map.py
tests/core/: test_finance_fetcher.py  test_metric_availability_checker.py
tests/data/: test_metric_definition.py  test_yfinance_mapping.py
